[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sage-architecture"
version = "1.0.0"
description = "神之上架构 + 贤者工程 + 贤者Claw 超级智能体架构系统"
readme = "README.md"
authors = [
    {name = "Somn Team", email = "somn@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = [
    "ai", "intelligence", "agent", "wisdom", "claw", "architecture",
    "multi-agent", "collaborative", "knowledge-system", "chinese-philosophy",
    "decision-support", "strategic-planning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "pylint>=2.17",
    "mypy>=1.0",
]
docker = [
    "docker>=6.0",
    "docker-compose>=2.0",
]

[project.urls]
Homepage = "https://github.com/marcwadehan-png/SageArchitecture"
Documentation = "https://github.com/marcwadehan-png/SageArchitecture#readme"
Repository = "https://github.com/marcwadehan-png/SageArchitecture.git"
Issues = "https://github.com/marcwadehan-png/SageArchitecture/issues"


[tool.setuptools.packages.find]
where = ["sageclaw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
